Added second image

--- a/Day2.html
+++ b/Day2.html
@@ -16,6 +16,7 @@ Kia ora! My name is Ben Britton. I was born in Christchurch and grew up in Welli
     I really enjoy using computers. I like programming, doing electronics projects and designing things for my 3D printer. I also like riding my bike. I ride to school whenever I can.
   </p>
   <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Wainuiview.jpg" alt="Wainuiomata">
+  <img src="Arduino.jpg" alt="Arduino project">
   <script src="script.js"></script>
 </body>
 
