--- a/Day3.html
+++ b/Day3.html
@@ -22,6 +22,8 @@ Kia ora! My name is Ben Britton. I was born in Christchurch and grew up in Welli
     </ul>
   </p>
   <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Wainuiview.jpg" alt="Wainuiomata">
+  <img src="Arduino.jpg" alt="Arduino project">
+
   <script src="script.js"></script>
 </body>
 
