--- a/Day8.html
+++ b/Day8.html
@@ -28,6 +28,8 @@ Kia ora! My name is Ben Britton. I was born in Christchurch and grew up in Welli
     </ul>
   </p>
   <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Wainuiview.jpg" alt="Wainuiomata">
+  <img src="Arduino.jpg" alt="Arduino project">
+
     </div><!-- close the first column -->
  
     
